--- a/package.json
+++ b/package.json
@@ -14,14 +14,8 @@
   "author": "yusei-hyodo (https://github.com/yusei-hyodo/)",
   "license": "MIT",
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.0.20",
-    "@ffprobe-installer/ffprobe": "^1.0.12",
-    "@google-cloud/speech": "^3.6.0",
-    "@google-cloud/vision": "^1.11.0",
     "@line/bot-sdk": "^6.8.4",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "streamifier": "^0.1.1"
+    "express": "^4.17.1"
   }
 }
