--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "yusei-hyodo (https://github.com/yusei-hyodo/)",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/vision": "^1.11.0",
     "@line/bot-sdk": "^6.8.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
